--- a/kort_med_pager/style.css
+++ b/kort_med_pager/style.css
@@ -19,3 +19,33 @@ body {
     text-align: center;
     box-shadow: 0 10px 20px 0px rgba (0, 0, 0, 0.15);
 }
+
+p {
+    color: lightgray;
+}
+
+.pager {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 10px;
+    align-items: flex-end;
+    margin-top: auto;
+}
+
+.dot {
+    width: 10px;
+    height: 10px;
+    background-color: #bbb;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.dot.active, .dot:hover {
+    background-color: #333;
+}
