--- a/produktkomponent_profilläge/style.css
+++ b/produktkomponent_profilläge/style.css
@@ -1,68 +1,53 @@
 body {
     background-color: #dcdcdc;
-    font-family: Arial, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 0;
+    padding: px;
+}
+
+.title p {
+    font-weight: bold;
 }
 
 .product-card {
-    width: 300px;
-    background: #fff;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    border-radius: 8px;
-    overflow: hidden;
+    width: 200px;
+}
+
+img {
+    width: 90%;
+    margin: 30px 10px;
+    align-self: center;
 }
 
 .product-image {
     background-color: #f5cf2d;
-    padding: 20px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    position: relative;
+    align-items: flex-end;
+    padding: 10px;
 }
 
-.product-image img {
-    width: 100%;
-    border-radius: 8px;
-}
-
-.product-image small {
+small {
     color: white;
-    
-    bottom: 10px;
-    right: 20px;
 }
 
 .product-information {
-    padding: 20px;
-}
-
-.title {
-    text-align: center;
-}
-
-.product-title {
-    margin: 0;
-    font-size: 1.2em;
-}
-
-.product-model {
-    margin: 5px 0 15px;
-    color: #666;
-}
-
-.product-description {
-    font-size: 0.9rem;
-    margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 13px;
+    background-color: white;
 }
 
 .price {
-    text-align: center;
-    font-size: 1.2em;
+    align-self: flex-end;
     font-weight: bold;
-    color: black;
+    font-size: 20px;
+}
+
+.product-model {
+    margin: 0;
 }
