--- a/produktkomponent_landskapsläge/style.css
+++ b/produktkomponent_landskapsläge/style.css
@@ -35,22 +35,33 @@ body {
 
 .product-information {
     background: #fff;
+    flex: 1;
+    padding: 2rem;
+    display: flex;
     flex-direction: column;
-    padding: 20px;
     box-sizing: border-box;
-    text-align: center;
 }
 
-.title {
-    margin-bottom: 10px;
+h1 {
     font-size: 2rem;
+    margin: 2rem 0 0 0;
+}
+
+h2 {
+    margin: 0;
+    font-weight: 500;
+}
+
+p {
+    font-size: 1rem;
+    line-height: 1.4;
+    color: rgba(0,0,0,.7);
 }
 
 .product-description {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
 }
 
 .price {
@@ -58,8 +69,25 @@ body {
     position: absolute;
     bottom: 10px;
     right: 10px;
-    font-size: 1.2em;
-    background: rgba(0, 0, 0, 0.1);
+    font-size: 2rem;
+    font-weight: bold;
     padding: 5px;
     border-radius: 5px;
+}
+
+button {
+    background-color: white;
+    padding: 10px;
+    position: absolute;
+    bottom: 30px;
+    right: 20px;
+    font-size: 1em;
+    font-weight: bold;
+    border: 2px solid black;
+}
+
+button:hover {
+    background: black;
+    color: white;
+    cursor: pointer;
 }
