--- a/spelkort/style.css
+++ b/spelkort/style.css
@@ -27,14 +27,13 @@ body {
 }
 
 .upper-left {
-    top: 10px;
     left: 10px;
 }
 
 .number {
     color: black;
     font-size: 1.5rem;
-    margin-left: 19px;
+    margin: 50px 19px;
 }
 
 .center {
@@ -44,6 +43,7 @@ body {
 }
 
 .lower-right {
-    bottom: 10px;
+    bottom: 0px;
     right: 10px;
+    transform: rotate(180deg);
 }
