--- a/spelkort/style.css
+++ b/spelkort/style.css
@@ -36,6 +36,18 @@ body {
     margin: 50px 19px;
 }
 
+.second-number {
+    color: black;
+    margin-top: 10px;
+    position: absolute;
+    bottom: 40px;
+    right: 13px;
+    font-size: 1.5rem;
+    padding: 5px;
+    border-radius: 5px;
+    transform: rotate(180deg);
+}
+
 .center {
     top: 50%;
     left: 50%;
