--- a/flexbox_fibonacci/style.css
+++ b/flexbox_fibonacci/style.css
@@ -6,12 +6,12 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: blue;
     font-size: 1rem;
 }
 
 article {
     width: 90%;
+    height: 10%;
     display: flex;
     justify-content: center;
     margin: 10px 0;
@@ -23,34 +23,43 @@ article.reverse {
 
 article section {
     padding: 1rem;
-    text-align: center;
+    text-align: left;
     color: white;
 }
 
-article .box-1 {
+article .box-1 { /*0*/
     background-color: #640000;
+    flex-grow: 0;
 }
-article .box-2 {
+article .box-2 { /*1*/
     background-color: #641400;
+    flex-grow: 1;
 }
-article .box-3 {
+article .box-3 { /*2*/
     background-color: #642800;
+    flex-grow: 2;
 }
-article .box-4 {
+article .box-4 { /*3*/
     background-color: #645000;
+    flex-grow: 3;
 }
-article .box-5 {
+article .box-5 { /*5*/
     background-color: #646400;
+    flex-grow: 5;
 }
-article .box-6 {
+article .box-6 { /*8*/
     background-color: #647800;
+    flex-grow: 18;
 }
-article .box-7 {
+article .box-7 { /*13*/
     background-color: #648d00;
+    flex-grow: 13;
 }
-article .box-8 {
+article .box-8 { /*21*/
     background-color: #64a000;
+    flex-grow: 21;
 }
-article .box-9 {
+article .box-9 { /*34*/
     background-color: #64b301;
+    flex-grow: 34;
 }
